ast/src/snapshots/transmute_ast__ast_print__tests__perimeter.snap
---
source: ast/src/ast_print.rs
expression: s
---
+- stmt 0
   +- Namespace name=<root>
      +- stmt 1
      |  +- Use std.env.args
      +- stmt 2
      |  +- Use std.list.list_get
      +- stmt 3
      |  +- Use std.numbers.number_parse
      +- stmt 4
      |  +- Use std.numbers.print
      +- stmt 5
      |  +- Struct name=Point
      |     +- x: number
      |     +- y: number
      +- stmt 6
      |  +- Struct name=Square
      |     +- a: Point
      |     +- b: Point
      +- stmt 12
         +- Fn name=main
            +- annotations=[]
            +- params=[]
            +- ret=[]
            +- body:expr 37
               +- Block
                  +- stmt 7
                  |  +- Let name=n
                  |     +- expr 6
                  |        +- Call
                  |           +- expr 0
                  |           |  +- Ident: number_parse
                  |           +- params
                  |              +- expr 5
                  |                 +- Call
                  |                    +- expr 1
                  |                    |  +- Ident: list_get
                  |                    +- params
                  |                       +- expr 3
                  |                       |  +- Call
                  |                       |     +- expr 2
                  |                       |     |  +- Ident: args
                  |                       |     +- params=[]
                  |                       +- expr 4
                  |                          +- Number: 1
                  +- stmt 8
                  |  +- Let name=square
                  |     +- expr 13
                  |        +- StructInstantiate name=Square
                  |           +- field name=a
                  |           |  +- expr 9
                  |           |     +- StructInstantiate name=Point
                  |           |        +- field name=x
                  |           |        |  +- expr 7
                  |           |        |     +- Number: 0
                  |           |        +- field name=y
                  |           |           +- expr 8
                  |           |              +- Number: 0
                  |           +- field name=b
                  |              +- expr 12
                  |                 +- StructInstantiate name=Point
                  |                    +- field name=x
                  |                    |  +- expr 10
                  |                    |     +- Ident: n
                  |                    +- field name=y
                  |                       +- expr 11
                  |                          +- Ident: n
                  +- stmt 9
                  |  +- Let name=width
                  |     +- expr 20
                  |        +- Binary -
                  |           +- lhs:expr 16
                  |           |  +- Access
                  |           |     +- expr 15
                  |           |     |  +- Access
                  |           |     |     +- expr 14
                  |           |     |     |  +- Ident: square
                  |           |     |     +- ident=b
                  |           |     +- ident=x
                  |           +- rhs:expr 19
                  |              +- Access
                  |                 +- expr 18
                  |                 |  +- Access
                  |                 |     +- expr 17
                  |                 |     |  +- Ident: square
                  |                 |     +- ident=a
                  |                 +- ident=x
                  +- stmt 10
                  |  +- Let name=height
                  |     +- expr 27
                  |        +- Binary -
                  |           +- lhs:expr 23
                  |           |  +- Access
                  |           |     +- expr 22
                  |           |     |  +- Access
                  |           |     |     +- expr 21
                  |           |     |     |  +- Ident: square
                  |           |     |     +- ident=b
                  |           |     +- ident=y
                  |           +- rhs:expr 26
                  |              +- Access
                  |                 +- expr 25
                  |                 |  +- Access
                  |                 |     +- expr 24
                  |                 |     |  +- Ident: square
                  |                 |     +- ident=a
                  |                 +- ident=y
                  +- stmt 11
                     +- Expression
                        +- expr 36
                           +- Call
                              +- expr 28
                              |  +- Ident: print
                              +- params
                                 +- expr 35
                                    +- Binary +
                                       +- lhs:expr 31
                                       |  +- Binary *
                                       |     +- lhs:expr 29
                                       |     |  +- Ident: width
                                       |     +- rhs:expr 30
                                       |        +- Number: 2
                                       +- rhs:expr 34
                                          +- Binary *
                                             +- lhs:expr 32
                                             |  +- Ident: height
                                             +- rhs:expr 33
                                                +- Number: 2
