ast/src/snapshots/transmute_ast__ast_print__tests__structs_fn.snap
---
source: ast/src/ast_print.rs
expression: s
---
+- stmt 0
   +- Namespace name=<root>
      +- stmt 1
      |  +- Use std.env.args
      +- stmt 2
      |  +- Use std.list.list_get
      +- stmt 3
      |  +- Use std.numbers.number_parse
      +- stmt 4
      |  +- Use std.numbers.print
      +- stmt 5
      |  +- Struct name=Point
      |     +- types=[]
      |     +- x: number
      |     +- y: number
      +- stmt 10
      |  +- Fn name=main
      |     +- annotations=[]
      |     +- params=[]
      |     +- ret=[]
      |     +- body:expr 18
      |        +- Block
      |           +- stmt 6
      |           |  +- Let name=n
      |           |     +- expr 6
      |           |        +- Call
      |           |           +- expr 0
      |           |           |  +- Ident: number_parse
      |           |           +- params
      |           |              +- expr 5
      |           |                 +- Call
      |           |                    +- expr 1
      |           |                    |  +- Ident: list_get
      |           |                    +- params
      |           |                       +- expr 3
      |           |                       |  +- Call
      |           |                       |     +- expr 2
      |           |                       |     |  +- Ident: args
      |           |                       |     +- params=[]
      |           |                       +- expr 4
      |           |                          +- Number: 1
      |           +- stmt 7
      |           |  +- Let name=origin
      |           |     +- expr 8
      |           |        +- Call
      |           |           +- expr 7
      |           |           |  +- Ident: origin
      |           |           +- params=[]
      |           +- stmt 8
      |           |  +- Let name=a
      |           |     +- expr 14
      |           |        +- Call
      |           |           +- expr 9
      |           |           |  +- Ident: area
      |           |           +- params
      |           |              +- expr 10
      |           |              |  +- Ident: origin
      |           |              +- expr 13
      |           |                 +- StructInstantiate name=Point
      |           |                    +- types=[]
      |           |                    +- field name=x
      |           |                    |  +- expr 11
      |           |                    |     +- Ident: n
      |           |                    +- field name=y
      |           |                       +- expr 12
      |           |                          +- Ident: n
      |           +- stmt 9
      |              +- Expression
      |                 +- expr 17
      |                    +- Call
      |                       +- expr 15
      |                       |  +- Ident: print
      |                       +- params
      |                          +- expr 16
      |                             +- Ident: a
      +- stmt 12
      |  +- Fn name=origin
      |     +- annotations=[]
      |     +- params=[]
      |     +- ret=Point
      |     +- body:expr 22
      |        +- Block
      |           +- stmt 11
      |              +- Expression
      |                 +- expr 21
      |                    +- StructInstantiate name=Point
      |                       +- types=[]
      |                       +- field name=x
      |                       |  +- expr 19
      |                       |     +- Number: 0
      |                       +- field name=y
      |                          +- expr 20
      |                             +- Number: 0
      +- stmt 16
         +- Fn name=area
            +- annotations=[]
            +- params
            |  +- p1: Point
            |  +- p2: Point
            +- ret=number
            +- body:expr 36
               +- Block
                  +- stmt 13
                  |  +- Let name=dx
                  |     +- expr 27
                  |        +- Binary -
                  |           +- lhs:expr 24
                  |           |  +- Access
                  |           |     +- expr 23
                  |           |     |  +- Ident: p2
                  |           |     +- ident=x
                  |           +- rhs:expr 26
                  |              +- Access
                  |                 +- expr 25
                  |                 |  +- Ident: p1
                  |                 +- ident=x
                  +- stmt 14
                  |  +- Let name=dy
                  |     +- expr 32
                  |        +- Binary -
                  |           +- lhs:expr 29
                  |           |  +- Access
                  |           |     +- expr 28
                  |           |     |  +- Ident: p2
                  |           |     +- ident=y
                  |           +- rhs:expr 31
                  |              +- Access
                  |                 +- expr 30
                  |                 |  +- Ident: p1
                  |                 +- ident=y
                  +- stmt 15
                     +- Expression
                        +- expr 35
                           +- Binary *
                              +- lhs:expr 33
                              |  +- Ident: dx
                              +- rhs:expr 34
                                 +- Ident: dy
